[tool.poetry]
name = "llm-pls"
version = "0.1.0"
description = "An API wrapper for when your language model is a little too big to initialize in every script"
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "1.11.0"
transformers = "^4.20.1"
accelerate = "^0.10.0"
numpy = "^1.23.0"
cryptography = "37.0.2"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
